fix alignments

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,8 +9,6 @@
 }
 
 body {
-    width: 100%;
-    height: 100%;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
 }
@@ -53,6 +51,10 @@ ul {
 
 .text-red {
     color: #ff0000 !important;
+}
+
+.fs-12 {
+    font-size: 12px;
 }
 
 .fs-14 {
@@ -144,6 +146,7 @@ ul {
 
 .footer-area .footer-menu h4 {
     margin-bottom: 30px;
+    font-weight: bold;
 }
 
 .footer-area .footer-copyrights {
@@ -154,10 +157,6 @@ ul {
 .product-details-area {
     padding: 22px 0 10px 0;
     background-color: #f5f5f5;
-}
-
-.product-details-area .product-title {
-    font-size: 18px;
 }
 
 .product-details-area .product-price {
